--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -54,12 +54,14 @@
   <string name="DraftDatabase_Draft_video_snippet">(videaĵo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(loko)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(respondo)</string>
-  <!--AttchmentManager-->
+  <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Ne eblas trovi aplikaĵon por malfermi aŭdvidaĵon.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal bezonas la Konservejo-permeson por almeti bildojn, videojn aŭ aŭdaĵojn, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Konservejo“.</string>
   <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Signal bezonas permeson legi kontaktojn por kunligi kontaktajn informojn, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Kontaktoj“.</string>
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal bezonas Pozicio-permeson por kunligi pozicion, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Pozicio“.</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal bezonas la Fotilo-permeson por preni fotojn, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Fotilo“.</string>
+  <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">Alŝuto de aŭdvidaĵo...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Eraro dum ludo de sonaĵo!</string>
   <!--BlockedContactsActivity-->
@@ -467,6 +469,11 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Signal-piktogramo</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Sendi pasfrazon</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Nevalida pasfrazo!</string>
+  <!--PlacePickerActivity-->
+  <string name="PlacePickerActivity_title">Mapo</string>
+  <string name="PlacePickerActivity_not_a_valid_address">Nevalida adreso</string>
+  <string name="PlacePickerActivity_drop_pin">Elekti tiun ĉi lokon</string>
+  <string name="PlacePickerActivity_accept_address">Akcepti la adreson</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La instalita versio de la Google-servoj „Play“ ne bone funkcias. Bv. re-instali „Google Play Services“, kaj provi denove.</string>
   <!--RatingManager-->
@@ -678,6 +685,8 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="MessageNotifier_reply">Respondi</string>
   <string name="MessageNotifier_signal_message">Signal-mesaĝo</string>
   <string name="MessageNotifier_unsecured_sms">Nesekura SMS</string>
+  <string name="MessageNotifier_you_may_have_new_messages">Vi eble havas novajn mesaĝojn</string>
+  <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Malfermu Signal-on por vidi, ĉu estas sciigoj.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakto</string>
   <!--Notification Channels-->
